# dependent-regular-grammars

./: LICENSE  README  README.md  _CoqProject  coq-monadic-grammars.opam  dune-project
src/: dune
src/theories/: Parsers.v  Regular.v  dune
src/theories/Libs/: NetStrings.v
