(library
 (name certiparse)              ; This is the name you will use in
                                    ; Coq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name certiparse)     ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name
)
