(library
 (name coq_monadic_grammars)              ; This is the name you will use in
                                    ; Coq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name coq-monadic-grammars)     ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name

 
)

